--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost/onetomany
+spring.datasource.username=postgres
+spring.datasource.password=112358
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.servlet.multipart.enabled=true
 
